2000-07-28  Ettore Perazzoli  <ettore@helixcode.com>

	* Makefile.am: Updated so that it works when bonobo is installed
	on a different prefix.

2000-07-24  Larry Ewing  <lewing@helixcode.com>

	Makefile.am: generate the stubs.
	
	* HTMLEditor.idl, resolver.c, resolver.h: added for the trial
	corba interface.
	
	* editor-control-factory.c (load_from_corba): use the corba
	resolver.

2000-07-21  Larry Ewing  <lewing@helixcode.com>

	* editor-control-factory.c (load_from_file): close the stream and
	the file when we are done with it.

	* popup.c (popup_show): remove the incorrect dereferences of the
	url and target strings in the test to stop the crashes.

2000-07-20  Radek Doulik  <rodo@helixcode.com>

	* spell.c: new file, popup window with spell checker suggestions

	* spell.h: new file

2000-07-17  Pavel Cisler  <pavel@eazel.com>

	* Makefile.am:
	Fix a hard dependency on pspell, making it build if you don't have
	pspell installed.
	Radek broke that earlier today and forgot to add a ChangeLog entry 
	about it.

2000-07-15  Larry Ewing  <lewing@helixcode.com>

	* editor-control-factory.c (editor_control_factory): connect to
	url_requested.
	(url_requested_cb): try to load_from_file.
	(load_from_file): rough code to load file to stream.

2000-07-11  Radek Doulik  <rodo@helixcode.com>

	* toolbar.c (setup_font_size_option_menu): added font size option
	menu + another one insertion style changed cb

2000-07-10  Radek Doulik  <rodo@helixcode.com>

	* toolbar.c (toolbar_setup): it now adds some commands to uih toolbar
	(toolbar_style): old one toolbar is created here, also uses hbox,
	so it doesn't eat all space
	- removed ToolbarData structure, store this info in ControlData
	- update all callbacks to use ControlData
	- add Undo/Redo to toolbar

	* test-html-editor-control.c (container_create): create toolbar here

2000-07-10  Larry Ewing  <lewing@helixcode.com>

	* editor-control-factory.c (release): initialize the default
	edit property type.
